--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,69 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    height: 100%;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.loading {
+    width: 2rem;
+    height: 2rem;
+    border-radius: 100%;
+    border-top: 2px solid gray;
+    border-right: 2px solid gray;
+    border-bottom: 2px solid gray;
+    animation: loading-spin infinite 1s linear;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+@keyframes loading-spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
-.card {
-  padding: 2em;
+.error {
+    padding: 1rem 2rem;
+    border-radius: 0.5rem;
+    border: 1px solid rgb(224, 39, 39);
+    background-color: rgb(255, 196, 196);
+    color: rgb(255, 50, 50);
 }
 
-.read-the-docs {
-  color: #888;
+.search {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.pokemon_list {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
+.pokemon {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 2rem;
+    border: solid 1px #fffaaf;
+    gap: 1rem;
+}
+
+.pokemon__info {
+    text-transform: capitalize;
 }
